CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(yprojects)

SET(SDK ${PROJECT_SOURCE_DIR}/../../sdk)
INCLUDE(${SDK}/share/yocto/rules.cmake)

INCLUDE_DIRECTORIES(${SDK}/include)
LINK_DIRECTORIES(${SDK}/lib)

SET(CMAKE_INSTALL_PREFIX ${SDK})

ADD_SUBDIRECTORY(file2data)
ADD_SUBDIRECTORY(driver)

IF( NOT WIN32 )
ADD_SUBDIRECTORY(pipes)
ENDIF()

IF( WIN32 )
ADD_SUBDIRECTORY(wpipes)
ENDIF()

#ADD_SUBDIRECTORY(wrapper)
ADD_SUBDIRECTORY(genrsa)
ADD_SUBDIRECTORY(fltk)
#ADD_SUBDIRECTORY(bitrev)
ADD_SUBDIRECTORY(base64)
ADD_SUBDIRECTORY(sshrsa)
ADD_SUBDIRECTORY(psd)
#ADD_SUBDIRECTORY(fluoresceine)
ADD_SUBDIRECTORY(zarc4)
ADD_SUBDIRECTORY(krypton)
#ADD_SUBDIRECTORY(gfxrgb)
#ADD_SUBDIRECTORY(findsymbol)
#ADD_SUBDIRECTORY(genprm)
#ADD_SUBDIRECTORY(harmo2014)
ADD_SUBDIRECTORY(volfit)
#ADD_SUBDIRECTORY(genfish)
#ADD_SUBDIRECTORY(gencolors)
#ADD_SUBDIRECTORY(otsu-voro)
ADD_SUBDIRECTORY(cbridge)
ADD_SUBDIRECTORY(tcp-relay)



